--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,11 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+Welcome to my personal docs! This is a site where I save answers to various programming problems I've had throughout the years so that I can reference them later. I hope you find it useful too!
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+{/* ## What is Nextra? */}
 
-## Documentation
+{/* A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js. */}
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+{/* ## Documentation */}
+
+{/* The documentation is available at [https://nextra.site](https://nextra.site). */}
